# HumidistatHost

./: HumidistatHost.code-workspace
ESP01S/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
ESP01S/main/: CMakeLists.txt  app_main.c  app_main.h  app_uart.c  app_uart.h
ESP01S/main/mdns/: mdns_service.c  mdns_service.h
ESP01S/main/modbus/common/: modbus_params.c  modbus_params.h
ESP01S/main/modbus/tcp/: tcp_slave.c  tcp_slave.h
ESP01S/main/wifi/: wifi_module.c  wifi_module.h
Python/src/: __main__.py  modbus_master.py
STM32/: CMakeCache.txt  CMakeLists.txt  README.md  STM32.ioc  build.ninja  cmake_install.cmake  compile_commands.json
STM32/Core/Inc/: aht20.h  communicate.h  i2c.h  main.h  stm32f1xx_it.h
STM32/Core/Src/: aht20.c  communicate.c  dma.c  i2c.c  main.c  stm32f1xx_it.c  tim.c  usart.c
STM32/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
